Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47295

Menubar menu is closed on release after mouse move

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0
    • 5.5.0
    • Quick: Controls 1
    • None
    • I632fab0a3abfdfc9872f85f99f9d7f50d41526cc

      Reproducible on Windows:
      1) Create an application with a menubar and a menu
      2) Press on a menu on the menubar without releasing
      3) Move 1 pixel away from where you pressed and release the mouse button
      4) The menu gets closed when instead it should stay opened

        For Gerrit Dashboard: QTBUG-47295
        # Subject Branch Project Status CR V

            cuke Filippo Cucchetto
            cuke Filippo Cucchetto
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes